# java

./: .bazelrc  .gitattributes  BUILD  MODULE.bazel  catalog-info.yaml
docs/dependency-versioning/: index.md  java.md
infrastructure/pulumi/repo_config/: Pulumi.yaml  README.md  go.mod  main.go
