# Currently bazel-lib is only load()ed when platforms is used.
bazel_dep(name = "bazel_lib", version = "3.1.1")
bazel_dep(name = "aspect_bazel_lib", version = "2.22.5", repo_name = None)  # force a recent version that works with v3
bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "apple_support", version = "2.2.0")

# 2.5.2: loads CcInfo from rules_cc (Bazel 9 removed the builtin; older
# versions fail analysis of the clang-tidy linter aspect on Bazel >= 9.0.1).
# Stay below 2.6.0, which moves clippy out of lint/ into a nested rules_rust
# module and would churn tools/lint/linters.bzl.
bazel_dep(name = "aspect_rules_lint", version = "2.5.2")
bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.1")

# Bazel 9: aspect_rules_lint -> aspect_rules_js pulls rules_nodejs transitively;
# versions before 6.7.3 load the removed CcInfo builtin and fail analysis on
# Bazel >= 9.0.1 (https://github.com/bazelbuild/bazel/pull/28360 surfaces it).
# The javascript presets declare a direct rules_nodejs dep below instead.
bazel_dep(name = "rules_nodejs", version = "6.7.3", repo_name = None)
bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "rules_multitool", version = "1.11.1")

# Aggregates //:gazelle (+ python manifest) and //tools/format into //:tidy.
bazel_dep(name = "rules_multirun", version = "0.13.0")
bazel_dep(name = "bazel_env.bzl", version = "0.5.0")
bazel_dep(name = "bazelrc-preset.bzl", version = "1.8.0")

# We have to take a dependency on rules_python in order to set bootstrap=script
# for transitive dependencies, even if there are no Python rules used in this repo.
# See .bazelrc
bazel_dep(name = "rules_python", version = "1.8.3")
bazel_dep(name = "gazelle", version = "0.47.0")

# rules_shell is unconditional: the always-shipped `//tools/remote:setup` sh_binary
# (remote-build setup helper) needs it even when "Shell" isn't a selected language.
bazel_dep(name = "rules_shell", version = "0.6.1")

multitool = use_extension("@rules_multitool//multitool:extension.bzl", "multitool")
multitool.hub(lockfile = "//tools:tools.lock.json")
use_repo(multitool, "multitool")

#########################
# Protobuf and gRPC
bazel_dep(name = "protobuf", version = "33.5")
bazel_dep(name = "protovalidate", version = "1.0.0")

# Force later resolutions of some transitives to pick up Bazel 9 fixes
bazel_dep(name = "rules_foreign_cc", version = "0.15.1", repo_name = None)
bazel_dep(name = "grpc-java", version = "1.78.0")
bazel_dep(name = "bazel_jar_jar", version = "0.1.12", repo_name = None)

# Bazel 9: gazelle and buildifier_prebuilt pull rules_go transitively; versions
# before 0.59.0 load the removed CcInfo builtin (go/private/rules/cgo.bzl) and
# fail analysis on Bazel >= 9.0.1 (https://github.com/bazelbuild/bazel/pull/28360
# surfaces it). Floor it; Go presets declare the direct dep above instead.
bazel_dep(name = "rules_go", version = "0.59.0", repo_name = None)

#########################
# Java and other JVM languages
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.9")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

# In the Maven support variation, the dependencies are conveniently listed here
# in the MODULE.bazel file.
maven.install(
    artifacts = ["io.grpc:grpc-all:1.51.1"],
    lock_file = "//:maven_install.json",
)
use_repo(
    maven,
    "maven",
    "unpinned_maven",
)

http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "net_sourceforge_pmd",
    build_file_content = "\n".join([
        """load("@rules_java//java:java_import.bzl", "java_import")""",
        """java_import(name = "net_sourceforge_pmd", jars = glob(["*.jar"]), visibility = ["//visibility:public"])""",
    ]),
    integrity = "sha256-vov2j2wdZphL2WRak+Yxt4ocL0L18PhxkIL+rWdVOUA=",
    strip_prefix = "pmd-bin-7.7.0/lib",
    url = "https://github.com/pmd/pmd/releases/download/pmd_releases/7.7.0/pmd-dist-7.7.0-bin.zip",
)

register_toolchains("//tools/toolchains:all")
